ref: correct text align for mobile version

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -406,6 +406,9 @@
     &:not(:last-child){
       @include adaptiveValue("margin-bottom", 32, 20);
     }
+    @media (max-width: $mobile) {
+      text-align: left;
+    }
   }
 
   &__text{
